dim/spec/test_input/invalid_input/duplicate_files.dim
Config:
  - originator: CompanyName
    files:
      - modules/duplicate_module.dim
      - modules/duplicate_module.dim
    category: module
